# openry

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  recode.md  windows-test-report.md
design/: phase1-command-forwarder.md  phase2-orchestrator.md  phase3-advanced.md  phase3a-advanced-validation-routing.md
docs/: day1-command-forwarder-article.md  day2-orchestrator-article.md  pitfalls.md
openry/: __init__.py  __main__.py  cli.py  config.py  db.py  executor.py  utils.py
openry/orchestrator/: __init__.py  cli.py  engine.py  payload.py  router.py  validation.py  validator.py  yaml_loader.py
openry/server/: __init__.py  api_server.py  event_bus.py
openry/web/: index.html
openry/web/css/: dashboard.css
openry/web/js/: api.js  app.js
openry/web/js/components/: command-log.js  metrics-cards.js  payload-viewer.js  transcript-viewer.js  trigger-panel.js  workflow-tree.js
orchestrator-plugin/: README.md  openclaw.plugin.json  package-lock.json  package.json
orchestrator-plugin/src/: index.test.ts  index.ts
orchestrator-plugin/src/orchestrator/: db-client.ts  gateway-client.ts  patrol.ts  router.ts  service.ts  session-key.ts  validation.ts  validator.ts  worker-pool.ts  yaml-loader.ts
orchestrator-plugin/src/tools/: openry-run.ts  openry-status.ts  trusted-policy.ts
